# deep_motion_planning

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: base_local_planner_params.yaml  boxes.yaml  costmap_common_params.yaml  empty.yaml  gui_config.rviz  rooms.yaml  shapes.yaml  simple.yaml
data_capture/: README.md
data_capture/src/: data_capture.py  data_capture_node.py  stamp_cmd_vel_node.py  support.py
data_capture/test/: test_csv.py
deep_learning_model/: .gitignore  LICENSE  Makefile  README.md  requirements.txt
deep_learning_model/config/: default.json
deep_learning_model/docs/: Makefile  conf.py  (+2 more)
deep_motion_planner/: CMakeLists.txt  README.md  package.xml  setup.py
deep_motion_planner/launch/: deep_motion_planner.launch  deep_motion_planner_robot.launch
deep_motion_planner/models/: model.pb
deep_motion_planner/models/2018-02-12_09-53_fc_36_laser_transform/: checkpoint  final.index  graph.pb  model.pb  snap-160000.index  snap-170000.index  snap-180000.index  snap-190000.index
deep_motion_planner/models/2018-02-12_09-53_fc_36_laser_transform/eval/: events.out.tfevents.1518425607.lynx  events.out.tfevents.1518425640.lynx
deep_motion_planner/models/2018-02-12_09-53_fc_36_laser_transform/train/: events.out.tfevents.1518425607.lynx  events.out.tfevents.1518425640.lynx
deep_motion_planner/python/deep_motion_planner/: deep_motion_planner.py  support.py  tensorflow_wrapper.py
deep_motion_planner/python/deep_motion_planner/util/: __init__.py
deep_motion_planner/src/: deep_motion_planner.py  deep_motion_planner_node.py  tensorflow_wrapper.py
deep_motion_planner/trained_models/fc_shapes_1000/: final.index  graph.pb  model.pb  snap-40000.index  snap-80000.index  variables_40000.p  variables_80000.p  variables_final.p
deep_motion_planner/trained_models/fc_shapes_1000/eval/: events.out.tfevents.1541166915.hyrax
deep_motion_planner/trained_models/fc_shapes_1000/train/: events.out.tfevents.1541166915.hyrax
evaluation_tools/: CMakeLists.txt  package.xml  setup.py
evaluation_tools/mission_files/office/: office_100.csv
evaluation_tools/mission_files/shapes/: shapes_10.csv  shapes_100.csv
evaluation_tools/mission_files/simple/: simple_10.csv  simple_100.csv
evaluation_tools/python/: evaluate_map.py
evaluation_tools/src/: evaluation_runner.py  evaluation_runner_node.py  grid_map.py  mission_file_parser.py  waypoint_generator.py
evaluation_tools/test/: test_grid_map.py
launch/: boxes.launch  core.launch  empty.launch  rooms.launch  shapes.launch  simple.launch
mission_control/: README.md
missions/: rooms.txt
planner_comparison/: CMakeLists.txt  package.xml  setup.py
planner_comparison/launch/: core_stage.launch  planner_comparison.launch  shapes_comparison.launch  world_comparison.launch
planner_comparison/python/planner_comparison/: RosbagInterface.py  TimeMsgContainer.py  plan_scoring.py  planner_comparison.py
planner_comparison/python/planner_comparison/util/: __init__.py
planner_comparison/src/: compare_deep_ros.py  compare_maps_for_model.py  compare_models.py  evaluation.py  plan_scoring.py  planner_comparison_node.py  plot_missions.py  plot_missions_real_data.py  plot_single_mission_real_data.py  score_trajectories.py  time_msg_container.py
safety_module/: CMakeLists.txt  package.xml
safety_module/include/safety_module/: SafetyModule.hpp  SafetyModuleWrapper.hpp
safety_module/src/: SafetyModule.cpp  SafetyModuleWrapper.cpp  node.cpp
src/: data_capture.py  data_capture_node.py  mission_control.py  mission_control_node.py  mission_file_parser.py
stage_worlds/: README.md  visPath.rviz
tools/: learning_sync.sh  pull.sh  rsync_exclude  sync.sh
turtlebot_controller/: CMakeLists.txt  package.xml
turtlebot_controller/launch/: turtlebot_controller.launch
turtlebot_controller/src/: turtlebot_controller.py  turtlebot_controller_node.py
visualization/: CMakeLists.txt  package.xml
visualization/src/: laser_visualization_2d.py  laser_vizualization_2d_node.py  visualize_attention.py  visualize_attention_node.py
worlds/: boxes.world  rooms.world  shapes.world  simple.world
(+102 files in other folders)
