<package format="2">
  <name>deep_motion_planner</name>
  <version>0.0.0</version>
  <description>Package to execute a deep neural network for navigation</description>
  <maintainer email="michael@todo.todo">michael</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>rospy</depend>

  <export>

  </export>
</package>
