<package format="2">
  <name>visualization</name>
  <version>0.0.0</version>
  <description>Visualization tools</description>
  <maintainer email="pfmark@ethz.ch">pfmark</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
	<depend>rospy</depend>
</package>
